Work around FF 60 ESR + Apple Silicon issue causing 40-60% CPU usage: It seems that style calculation gets insane when `overflow: auto` is used inside a collapsed box (specifically inside contextPane), although there might be more factors

--- a/chrome/skin/default/zotero/contextPane.css
+++ b/chrome/skin/default/zotero/contextPane.css
@@ -86,3 +86,8 @@
     overflow: hidden;
     text-overflow: ellipsis;
 }
+
+#zotero-context-pane[collapsed=true] .notes-list-container,
+#zotero-context-pane[collapsed=true] .zotero-view-item > tabpanel > * {
+    overflow: unset !important;
+}
